--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "dev": "ts-node ./src/server.ts",
-    "start": "nodemon ./dist/server.js",
-    "prod": "npm run build && npm run start"
+    "tsc": "tsc",
+    "tsc-watch": "tsc -w",
+    "build": "gulp build",
+    "start": "node build/server.js",
+    "test": "gulp test",
+    "watch": "nodemon --watch build/ build/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,11 +20,18 @@
     "@types/mongoose": "^5.2.22",
     "@types/node": "^10.12.1",
     "@types/ramda": "^0.25.40",
+    "gulp": "^3.9.1",
+    "gulp-env": "^0.4.0",
+    "gulp-mocha": "^6.0.0",
+    "gulp-rimraf": "^0.2.2",
+    "gulp-shell": "^0.6.5",
+    "gulp-tslint": "^8.1.3",
     "hapi": "^17.6.0",
     "hapi-auth-jwt2": "^8.1.0",
     "nconf": "^0.10.0",
     "nodemon": "^1.18.5",
     "ts-node": "^7.0.1",
+    "tslint": "^5.11.0",
     "typescript": "^3.1.5"
   },
   "dependencies": {
