--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,12 @@
 {
   "compilerOptions": {
-    "target": "es6", //default is es5
-    "module": "commonjs", //CommonJs style module in output
-    "outDir": "dist", //change the output directory
-    "resolveJsonModule": true //to import out json database
+    "outDir": "build",
+    "target": "es6",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "sourceMap": true,
+    "typeRoots": ["node_modules/@types"]
   },
-  "include": [
-    "src/**/*.ts" //which kind of files to compile
-  ],
-  "exclude": [
-    "node_modules" //which files or directories to ignore
-  ]
+  "include": ["src/**/**.ts", "test/**/**.ts"],
+  "exclude": ["node_modules"]
 }
